--- a/assets/create.html
+++ b/assets/create.html
@@ -1,12 +1,5 @@
 {% extends "admin/challenges/create.html" %}
 
-{% block header %}
-<div class="alert alert-secondary" role="alert">
-	Dynamic value challenges decrease in value as they receive solves. The more solves a dynamic challenge has,
-	the lower its value is to everyone who has solved it.
-</div>
-{% endblock %}
-
 
 {% block value %}
 <div class="form-group">
@@ -58,34 +51,8 @@
 </div>
 
 
-<div class="form-group"></div>
-    <label for="value">Docker Image<br>
-        <small class="form-text text-muted">
-            The docker image used to deploy
-        </small>
-    </label>
-    <input type="text" class="form-control" name="docker_image" placeholder="Enter docker image name" required>
-</div>
-
-<div class="form-group">
-    <label for="value">Docker Container Memory Limit<br>
-        <small class="form-text text-muted">
-            The memory usage limit
-        </small>
-    </label>
-    <input type="text" class="form-control" name="memory_limit" placeholder="Enter the memory limit" value="128m" required>
-</div>
-
-<div class="form-group">
-    <label for="value">Docker Container CPU Limit<br>
-        <small class="form-text text-muted">
-            The CPU usage limit
-        </small>
-    </label>
-    <input type="number" class="form-control" name="cpu_limit" placeholder="Enter the cpu limit" value="0.5" required>
-</div>
 {% endblock %}
 
 {% block type %}
-<input type="hidden" value="dynamic" name="type" id="chaltype">
+<input type="hidden" value="instanced" name="type" id="chaltype">
 {% endblock %}
