--- a/assets/view.html
+++ b/assets/view.html
@@ -7,29 +7,23 @@
       <div class="card-body">
         <h5 class="card-title">Info</h5>
 
+        <input type="hidden" id="nonce" value="{{ Session.nonce }}">
+        <input type="hidden" id="challenge-id" value="{{ challenge.id }}">
+
         <!-- "Launch an instance" button, visible initially -->
-        <button type="button" class="btn btn-primary card-link" id="button-boot" onclick="showInstanceButtons()">
+        <button type="button" class="btn btn-primary card-link" id="button-boot" onclick="createInstance()">
           Launch Instance
         </button>
 
         <!-- "Renew" and "Destroy" buttons, side by side, hidden initially -->
         <div id="instance-buttons" style="display: none;" class="justify-content-center">
-          <button type="button" class="btn btn-danger mx-2" id="button-destroy" onclick="hideInstanceButtons()">
+          <button type="button" class="btn btn-danger mx-2" id="button-destroy" onclick="deleteInstance()">
             Destroy Instance
-          </button>
-          <button type="button" class="btn btn-success mx-2" id="button-renew" onclick="renewInstance()">
-            Renew Instance
           </button>
         </div>
       </div>
     </div>
   </div>
-{% endblock %}
-
-
-{% block input %}
-    <input id="challenge-id" class="challenge-id" type="hidden" value="{{ challenge.id }}">
-    <input id="challenge-input" class="challenge-input" type="text" name="answer" placeholder="Flag"/>
 {% endblock %}
 
 <script src="view.js"></script>
